Bug 365323 - Subfolders are not added to RAR archives
Summary: Subfolders are not added to RAR archives
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.04.2
Platform: Compiled Sources Linux
: NOR major
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-10 15:49 UTC by Ragnar Thomsen
Modified: 2016-07-18 16:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ragnar Thomsen 2016-07-10 15:49:15 UTC
When adding folders to RAR archives through the Add Folder action, subfolders are not added.

Reproducible: Always

Steps to Reproduce:
1. Open/create a RAR archive.
2. Select Add Folder from Archive menu and select any folder that contains subfolders.
3. OR drag a folder containing subfolders to the archive.

Actual Results:  
Any subfolders are not added to the archive.

Expected Results:  
Any subfolders should get added to the archive including their files.
Comment 1 Ragnar Thomsen 2016-07-18 16:46:19 UTC
Git commit ad31f89e60ec7b6c9198348463530d5787bacadc by Ragnar Thomsen.
Committed on 18/07/2016 at 16:43.
Pushed by rthomsen into branch 'Applications/16.08'.

Fix adding subfolders to RAR archives

When adding folders to RAR archives, any subfolders were not added. This
was due to a trailing slash added to the path of subfolders, which
caused rar to not add these to the archive.
FIXED-IN: 16.08.0
Differential Revision: D2197

M  +2    -13   part/part.cpp

http://commits.kde.org/ark/ad31f89e60ec7b6c9198348463530d5787bacadc