Fix adding subfolders to RAR archives

When adding folders to RAR archives, any subfolders were not added. This
was due to a trailing slash added to the path of subfolders, which
caused rar to not add these to the archive.

BUG: 365323
FIXED-IN: 16.08.0
Differential Revision: D2197